@@ -16,13 +16,13 @@
 package com.expediagroup.beekeeper.cleanup.path.aws;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -31,8 +31,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.amazonaws.services.s3.model.ObjectMetadata;
-
-import com.expediagroup.beekeeper.core.error.BeekeeperException;
+import com.amazonaws.services.s3.model.S3ObjectSummary;
 
 @ExtendWith(MockitoExtension.class)
 class S3BytesDeletedCalculatorTest {
@@ -48,42 +47,59 @@ class S3BytesDeletedCalculatorTest {
 
   @BeforeEach
   void setUp() {
-    objectMetadata.setContentLength(contentBytes);
-    when(s3Client.getObjectMetadata(any(), any())).thenReturn(objectMetadata);
     s3BytesDeletedCalculator = new S3BytesDeletedCalculator(s3Client);
   }
 
   @Test
-  void typicalAllKeysSuccessfullyDeleted() {
-    List<String> keys = Arrays.asList(key1, key2, key3);
-    s3BytesDeletedCalculator.storeFileSizes(bucket, keys);
-    s3BytesDeletedCalculator.calculateBytesDeleted(keys);
-    assertThat(s3BytesDeletedCalculator.getBytesDeleted()).isEqualTo(contentBytes * 3);
+  void typicalKeySuccessfullyDeleted() {
+    objectMetadata.setContentLength(contentBytes);
+    when(s3Client.getObjectMetadata(any(), any())).thenReturn(objectMetadata);
+    s3BytesDeletedCalculator.storeFileSize(bucket, key1);
+    s3BytesDeletedCalculator.calculateBytesDeleted(List.of(key1));
+    assertThat(s3BytesDeletedCalculator.getBytesDeleted()).isEqualTo(contentBytes);
   }
 
   @Test
-  void noKeysSuccessfullyDeleted() {
-    List<String> keys = Arrays.asList(key1, key2, key3);
-    s3BytesDeletedCalculator.storeFileSizes(bucket, keys);
-    s3BytesDeletedCalculator.calculateBytesDeleted(Collections.emptyList());
+  void differentKeyDeleted() {
+    objectMetadata.setContentLength(contentBytes);
+    when(s3Client.getObjectMetadata(any(), any())).thenReturn(objectMetadata);
+    s3BytesDeletedCalculator.storeFileSize(bucket, key1);
+    s3BytesDeletedCalculator.calculateBytesDeleted(List.of(key2));
     assertThat(s3BytesDeletedCalculator.getBytesDeleted()).isEqualTo(0);
   }
 
   @Test
-  void someKeysSuccessfullyDeleted() {
-    List<String> keys = Arrays.asList(key1, key2, key3);
-    s3BytesDeletedCalculator.storeFileSizes(bucket, keys);
+  void allObjectsSuccessfullyDeleted() {
+    List<S3ObjectSummary> objectSummaries = objectSummaries(key1, key2, key3);
+    s3BytesDeletedCalculator.storeFileSizes(objectSummaries);
+    s3BytesDeletedCalculator.calculateBytesDeleted(Arrays.asList(key1, key2, key3));
+    assertThat(s3BytesDeletedCalculator.getBytesDeleted()).isEqualTo(contentBytes * 3);
+  }
+
+  @Test
+  void someObjectsSuccessfullyDeleted() {
+    List<S3ObjectSummary> objectSummaries = objectSummaries(key1, key2, key3);
+    s3BytesDeletedCalculator.storeFileSizes(objectSummaries);
     s3BytesDeletedCalculator.calculateBytesDeleted(Arrays.asList(key1));
     assertThat(s3BytesDeletedCalculator.getBytesDeleted()).isEqualTo(contentBytes);
   }
 
   @Test
-  void multipleCacheFilesThrowsException() {
-    List<String> keys = Arrays.asList(key1, key2, key3);
-    List<String> keys2 = Arrays.asList("somekey1", "somekey2", "somekey3");
-    s3BytesDeletedCalculator.storeFileSizes(bucket, keys);
-    assertThatThrownBy(() -> s3BytesDeletedCalculator.storeFileSizes(bucket, keys2))
-      .isInstanceOf(BeekeeperException.class)
-      .hasMessage("Should not cache files twice.");
+  void noObjectsSuccessfullyDeleted() {
+    List<S3ObjectSummary> objectSummaries = objectSummaries(key1, key2, key3);
+    s3BytesDeletedCalculator.storeFileSizes(objectSummaries);
+    s3BytesDeletedCalculator.calculateBytesDeleted(Collections.emptyList());
+    assertThat(s3BytesDeletedCalculator.getBytesDeleted()).isEqualTo(0);
+  }
+
+  private List<S3ObjectSummary> objectSummaries(String... keys) {
+    return Arrays.stream(keys)
+      .map(key -> {
+        S3ObjectSummary s3ObjectSummary = new S3ObjectSummary();
+        s3ObjectSummary.setKey(key);
+        s3ObjectSummary.setSize(contentBytes);
+        return s3ObjectSummary;
+      })
+      .collect(Collectors.toList());
   }
 }
